--- a/NodeJS/api_server/index.html
+++ b/NodeJS/api_server/index.html
@@ -10,9 +10,9 @@
     <div id="box">
         <title id="regTitle">登录界面</title><br><br>
             账号： 
-            <input type="text" id="accInfo">
+            <input type="text" id="accInfo" value="admin">
             密码：  
-            <input type="text" id="passInfo"><br><br>
+            <input type="text" id="passInfo" value="000000"><br><br>
             <button id="regBtn">注册</button>
             <button id="logBtn">登录</button>    
     </div>
