--- a/Project/cxview&programmer(NodeJs+WS)/public/homePage.html
+++ b/Project/cxview&programmer(NodeJs+WS)/public/homePage.html
@@ -27,6 +27,7 @@
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
          <!-- 引入 layui.css -->
         <!-- <link rel="stylesheet" href="//unpkg.com/layui@2.6.8/dist/css/layui.css"> -->
+        <!-- <link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"> -->
     </head>
     <body>
         <img src="./img/top1.svg">
@@ -399,26 +400,25 @@
 
         <!-- 报警信息 -->
         <div class="alarmInfo Page4">
-            查询起始时间：
-            <input type="text" class="layui-input" id="test1" placeholder="start-time">
-            查询结束时间：
-            <input type="text" class="layui-input" id="test2" placeholder="end-time">
-            <button type="button" class="layui-btn" id="alarmBtn" onclick="alarmSearch()">搜索</button>
-            <button type="button" class="layui-btn">导出</button>
+            <input type="text" class="layui-input" id="test1" 
+                placeholder="查询时间范围"
+                style="width: 270px; margin-left: 1%;">
+            <button id="alarmBtn" class="button" onclick="alarmSearch()">搜索</button>
+            <button class="button">导出</button>
             <!-- 报警表格 -->
             <div id="alarmTable">
-                <table border="1">
-                    <tr>
-                        <th>标签名</th>
-                        <th>错误描述</th>
-                        <th>开始时间</th>
-                        <th>结束时间</th>
-                        <th>标志位数值</th>
-                    </tr>
-                    <tr>
-                        <td>row 2, cell 1</td>
-                        <td>row 2, cell 2</td>
-                    </tr>
+                <table class="table">
+                    <thead bgcolor="#55aaff">
+                        <tr>
+                            <th>序号</th>
+                            <th>标签名</th>
+                            <th>错误描述</th>
+                            <th>开始时间</th>
+                            <th>结束时间</th>
+                            <th>标志位数值</th>
+                        </tr>
+                    </thead>
+                    <tbody id="tb_tbody"></tbody>
                 </table>
             </div>
         </div>
