--- a/Project/cxview&programmer(NodeJs+WS)/public/homePage.html
+++ b/Project/cxview&programmer(NodeJs+WS)/public/homePage.html
@@ -397,10 +397,9 @@
             <div class="statMain2"></div>
         </div>
 
-
         <!-- 报警信息 -->
         <div class="alarmInfo Page4">
-            <input type="text" class="layui-input" id="test1" 
+            <input type="text" class="layui-input" id="dateSearch" 
                 placeholder="查询时间范围"
                 style="width: 270px; margin-left: 1%;">
             <button id="alarmBtn" class="button" onclick="alarmSearch()">搜索</button>
@@ -423,6 +422,42 @@
             </div>
         </div>
         <!-- 一键巡查 -->
+        <div class="alarmInfo Page5">
+            <button class="button">导出表格</button>
+            <div id="alarmTable">
+                <table class="table">
+                    <thead bgcolor = '#55aaff'>
+                        <tr>
+                            <th>序号</th>
+                            <th>区域控制器列表</th>
+                            <th>在线状态</th>
+                            <th>错误代码</th>
+                            <th>控制器时钟</th>
+                            <th>最近修改程序时间</th>
+                            <th>总断电次数</th>
+                            <th>总通电时间(小时)</th>
+                            <th>I/O总线错误机架</th>
+                            <th>I/O总线错误插槽</th>
+                            <th>开关量单元错误机架号</th>
+                            <th>开关量单元错误插槽号</th>
+                            <th>程序循环</th>
+                            <th>I/O设置</th>
+                            <th>重复设置</th>
+                            <th>I/O总线</th>
+                            <th>模拟量单元设置</th>
+                            <th>通讯单元设置</th>
+                            <th>电池状态</th>
+                            <th>模拟量单元通信</th>
+                            <th>通讯单元通信</th>
+                            <th>I/O验证状态</th>
+                            <th>PLC设置</th>
+                            <th>开关量单元</th>
+                            <th>闪存状态</th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+        </div>
         <!-- 智能分析 -->
         <!------------------------------------- 模块选项 ---------------------------------->
         <div class="modal">
