--- a/Project/cxview&programmer(NodeJs+WS)/public/index.html
+++ b/Project/cxview&programmer(NodeJs+WS)/public/index.html
@@ -20,6 +20,8 @@
 <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
 <script src="./public/js/login.js"></script>
 <script src="../app.js"></script>
+<script src="../config.js"></script>
+
 <style>
     @import url(./public/css/login.css);
 </style>
