--- a/Test/ffmpeg+rtsp2web/index.html
+++ b/Test/ffmpeg+rtsp2web/index.html
@@ -15,7 +15,8 @@
     <!-- <script src="./index.js"></script> -->
     <script>
         // rtsp://<用户名>:<密码>@<IP地址>:<端口>/cam/realmonitor?channel=1&subtype=0
-        var rtsp = 'rtsp://wowzaec2demo.streamlock.net/vod/mp4:BigBuckBunny_115k.mp4'
+        // var rtsp = 'rtsp://wowzaec2demo.streamlock.net/vod/mp4:BigBuckBunny_115k.mp4'
+        var rtsp = 'rtsp://192.168.250.205:554/openUrl/GwAcBaw'
         // var rtsp = 'rtsp://admin:omron2022@192.168.2.188:554/cam/realmonitor?channel=1&subtype=0'
         window.onload = () => {
             // 将rtsp视频流地址进行btoa处理一下
